@@ -3,6 +3,7 @@ Version 1.5.7+svn:
    * Fixed drawing glitches in the listboxes.
    * Fixed a glitch which closed a new dialog on the mouse up event of the old
      dialog (the effect is percieved as the new dialog not showing up).
+   * Spacebar closes the dialogs without a scrollbar again.
  * Language and i18n:
    * updated translations: Slovak
  * Networking
